tests/test0151.exp
Parse error, unexpected := ( tests/test0151.ctr: 5 )
'My' should always be followed by a property name!
Parse error, unexpected number ( tests/test0151.ctr: 5 )
Expected a dot (.).
Parse error, unexpected } ( tests/test0151.ctr: 5 )
Expected a message recipient.
Parse error, unexpected } ( tests/test0151.ctr: 6 )
Expected a dot (.).
Got signal 'Segmentation fault', quitting
