tests/test0151.ctr
#NOAST
#Test parser error
o is Object new.
o on: 'test' do: {
	my is 123.
}.
